--- a/md_doc_statstics.html
+++ b/md_doc_statstics.html
@@ -199,9 +199,9 @@ What is in an OSM Object ?</h2>
 OSM Tags</h2>
 <p>All OSM objects have a <a href="https://wiki.openstreetmap.org/wiki/Map_features">keyword/value tagging scheme</a> that is used for metadata. While the tagging can often be inconsistent, for most humanitarian purposes, the tags are standardized.</p>
 <ul>
-<li>Buildings, usually tagged as <em>building=yes</em>. There can be additional tags like name or function and <a href="https://wiki.openstreetmap.org/wiki/Buildings">other tags</a> that describe the building in more detail. For statistc collection, most of the tags are ignored as what's counted is the building itself.</li>
-<li>Waterway, There can be additional tags like name or function and <a href="https://wiki.openstreetmap.org/wiki/Waterways">other tags</a> that describe the waterway in more detail. For statistc collection, most of the tags are ignored as what's counted is the waterway itself.</li>
-<li>Highway, There can be additional tags like name or function and <a href="https://wiki.openstreetmap.org/wiki/Highways">other tags</a> that describe the highway in more detail. For statistc collection, most of the tags are ignored as what's counted is the highway itself. Highways are counted whether they are a foot trail, jeep track, or major highway. </li>
+<li>Buildings, usually tagged as <em>building=yes</em>. There can be additional tags like name or function and <a href="https://wiki.openstreetmap.org/wiki/Buildings">other tags</a> that describe the building in more detail. For statistics collection, most of the tags are ignored as what's counted is the building itself.</li>
+<li>Waterway, There can be additional tags like name or function and <a href="https://wiki.openstreetmap.org/wiki/Waterways">other tags</a> that describe the waterway in more detail. For statistics collection, most of the tags are ignored as what's counted is the waterway itself.</li>
+<li>Highway, There can be additional tags like name or function and <a href="https://wiki.openstreetmap.org/wiki/Highways">other tags</a> that describe the highway in more detail. For statistics collection, most of the tags are ignored as what's counted is the highway itself. Highways are counted whether they are a foot trail, jeep track, or major highway. </li>
 </ul>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
