deploy: 2d846d9e1b494df917ac2baee871f64a5fe1b172

--- a/md_doc_statstics.html
+++ b/md_doc_statstics.html
@@ -183,7 +183,7 @@ What is in an OSM Object ?</h2>
 <tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone">The type  </td><td class="markdownTableBodyNone">Node, way, or relation   </td></tr>
 <tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">The location  </td><td class="markdownTableBodyNone">GPS coordinates for a node   </td></tr>
+<td class="markdownTableBodyNone">The location  </td><td class="markdownTableBodyNone">GPS coordinates for the object   </td></tr>
 <tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone">Nodes  </td><td class="markdownTableBodyNone">List of node IDs for a way   </td></tr>
 <tr class="markdownTableRowOdd">
