--- a/md_doc_schemas.html
+++ b/md_doc_schemas.html
@@ -69,6 +69,57 @@ $(function() {
 <p>Osmosis is commonly used for manipulating and importing data into these schemas. Although it has been unmaintained for several years. It’s written in Java, and as it uses temporary files on disk, an import can consume upwards of a terabyte.</p>
 <p>Underpass can import a data file into the <em>pgsnapshot</em> schema without <em>osmosis</em>. It can use replication files to update the database.</p>
 <h1><a class="anchor" id="autotoc_md26"></a>
+osm2pgsql</h1>
+<p><a href="https://osm2pgsql.org/">Osm2pgsql</a> is the primary tool for importing OSM files. The <em>osm2pgsql</em> program can import a data file into postgres, but it doesn’t support updating the data. As it contains geospatial data, it’s a compact and easily queried schema. It lacks any knowledge of relations, which isn’t usually a problem unless you want to do deeper analysis of the data.</p>
+<p>&#160;</p>
+<table class="markdownTable">
+<tr class="markdownTableHead">
+<th class="markdownTableHeadNone">Table  </th><th class="markdownTableHeadNone">Description   </th></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">planet_osm_line  </td><td class="markdownTableBodyNone">All of the ways that aren't a polygon   </td></tr>
+<tr class="markdownTableRowEven">
+<td class="markdownTableBodyNone">planet_osm_point  </td><td class="markdownTableBodyNone">All of the nodes   </td></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">planet_osm_polygon  </td><td class="markdownTableBodyNone">All of the polygons   </td></tr>
+<tr class="markdownTableRowEven">
+<td class="markdownTableBodyNone">planet_osm_roads  </td><td class="markdownTableBodyNone">Unused currently   </td></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">spatial_ref_sys  </td><td class="markdownTableBodyNone">Geospatial data for postgis   </td></tr>
+</table>
+<p>All of these tables have the same columns in the database. Any tag that doesn't fit one of these columns is stored in the *tags" column. The tags column uses hstore(<a href="https://www.postgresqltutorial.com/postgresql-hstore/">https://www.postgresqltutorial.com/postgresql-hstore/</a>), which can store additional keyword/value pairs. The columns are: osm_id, access, addr:housename, addr:housenumber, addr:interpolation, admin_level, aerialway, aeroway, amenity, area, barrier, bicycle, brand, bridge, boundary, building, construction, covered, culvert, cutting, denomination, disused, embankment, foot, generator:source, harbour, highway, historic, horse, intermittent, junction, landuse, layer, leisure, lock, man_made, military, motorcar, name, natural, office, oneway, operator, place, population, power, power_source, public_transport, railway, ref, religion, route, service, shop , sport, surface, toll, tourism, tower:type, tracktype, tunnel , water, waterway, wetland, width, wood, z_order, way_area, tags, way</p>
+<h1><a class="anchor" id="autotoc_md27"></a>
+ogr2ogr</h1>
+<p>[Ogr and GDAL])<a href="https://www.osgeo.org/projects/gdal/">https://www.osgeo.org/projects/gdal/</a>) are the basis for many GIS projects, but has <a href="https://gdal.org/drivers/vector/osm.html">minimal OSM</a> support. It can read the OSM XML and PBF formats, and can import into a database. It uses a different schema for each table.</p>
+<p>&#160;</p>
+<table class="markdownTable">
+<tr class="markdownTableHead">
+<th class="markdownTableHeadNone">Table  </th><th class="markdownTableHeadNone">Description   </th></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">lines  </td><td class="markdownTableBodyNone">All of the single lines   </td></tr>
+<tr class="markdownTableRowEven">
+<td class="markdownTableBodyNone">multilinestrings  </td><td class="markdownTableBodyNone">All of the multiple lines   </td></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">multipolygons  </td><td class="markdownTableBodyNone">All of the polygons   </td></tr>
+<tr class="markdownTableRowEven">
+<td class="markdownTableBodyNone">other_relations  </td><td class="markdownTableBodyNone">More of the tags   </td></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">points  </td><td class="markdownTableBodyNone">All of the nodes   </td></tr>
+<tr class="markdownTableRowEven">
+<td class="markdownTableBodyNone">spatial_ref_sys  </td><td class="markdownTableBodyNone">Geospatial data for postgis   </td></tr>
+</table>
+<p><a href="https://gdal.org/programs/ogr2ogr.html">ogr2ogr</a> uses a config file (<em>osmconf.ini</em>) to determine which fields in the OSM file get imported into which column. Any data not in one of these columns get put in the <em>other_tags</em> column. Other_tags is an hstore column, so contains multiple pairs of data. It is possible to modify the osmconf.ini file to have data that was going into the other_tags column go into it's own column.</p>
+<p>The data columns of an ogr2ogr created database are:</p>
+<table class="markdownTable">
+<tr class="markdownTableHead">
+<th class="markdownTableHeadNone">Table  </th><th class="markdownTableHeadNone">Columns   </th></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">multipolygons  </td><td class="markdownTableBodyNone">ogc_fid, osm_id, osm_way_id, name, type, aeroway, amenity, admin_level, barrier, boundary, building, craft, geological, historic, land_area, landuse, leisure, man_made, military, natural, office, place, shop, sport, tourism, other_tags, wkb_geometry   </td></tr>
+<tr class="markdownTableRowEven">
+<td class="markdownTableBodyNone">multilinestrings  </td><td class="markdownTableBodyNone">ogc_fid, osm_id, name, type, other_tags, wkb_geometry   </td></tr>
+<tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone">lines  </td><td class="markdownTableBodyNone">ogc_fid, osm_id, name, highway, waterway, aerialway, barrier, man_made, z_order, other_tags, wkb_geometry   </td></tr>
+</table>
+<h1><a class="anchor" id="autotoc_md28"></a>
 pgsnapshot</h1>
 <p>The <em>pgsnapshot</em> schema is a more compact version of the main database. It contains geospatial information, and can be updated using replication files. It can also be easily queried to produce data extracts in OSM format. By default, it is not well suited to any data analysis that uses geospatial calculations since the nodes are stored separately from the ways. Underpass extends this schema by by adding a geometry column to the ways table.</p>
 <p>schema.</p>
@@ -103,7 +154,7 @@ pgsnapshot</h1>
 <tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone">ways  </td><td class="markdownTableBodyNone">A list of ways   </td></tr>
 </table>
-<h1><a class="anchor" id="autotoc_md27"></a>
+<h1><a class="anchor" id="autotoc_md29"></a>
 apidb</h1>
 <p>The <em>apidb</em> schema is the one that operates the core OpenStreetMap servers, and is usually access through a REST API.</p>
 <table class="markdownTable">
@@ -209,46 +260,6 @@ apidb</h1>
 <td class="markdownTableBodyNone">way_tags  </td><td class="markdownTableBodyNone">tbd   </td></tr>
 <tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone">ways  </td><td class="markdownTableBodyNone">tbd   </td></tr>
-</table>
-<p>&#160; </p>
-<h1><a class="anchor" id="autotoc_md28"></a>
-osm2pgsql</h1>
-<p>Osm2pgsql is the primary tool for importing OSM files. The <em>osm2pgsql</em> program can import a data file into postgres, but it doesn’t support updating the data. As it contains geospatial data, it’s a compact and easily queried schema. It lacks any knowledge of relations, which isn’t usually a problem unless you want to do deeper analysis of the data.</p>
-<p>&#160;</p>
-<table class="markdownTable">
-<tr class="markdownTableHead">
-<th class="markdownTableHeadNone">Keyword  </th><th class="markdownTableHeadNone">Description   </th></tr>
-<tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">planet_osm_line  </td><td class="markdownTableBodyNone">All of the ways that aren't a polygon   </td></tr>
-<tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">planet_osm_point  </td><td class="markdownTableBodyNone">All of the nodes   </td></tr>
-<tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">planet_osm_polygon  </td><td class="markdownTableBodyNone">All of the polygons   </td></tr>
-<tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">planet_osm_roads  </td><td class="markdownTableBodyNone">Unused currently   </td></tr>
-<tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">spatial_ref_sys  </td><td class="markdownTableBodyNone">Geospatial data for postgis   </td></tr>
-</table>
-<p>&#160; </p>
-<h1><a class="anchor" id="autotoc_md29"></a>
-ogr2ogr</h1>
-<p>Ogr and GDAL are the basis for many GIS projects, but has minimal OSM data file support. It can read any of the file formats, and can import into a database. It does have one big improvement over the osm2pgsql format, namely better relation support. This schema can be used to calculate user statistics.</p>
-<p>&#160;</p>
-<table class="markdownTable">
-<tr class="markdownTableHead">
-<th class="markdownTableHeadNone">Keyword  </th><th class="markdownTableHeadNone">Description   </th></tr>
-<tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">lines  </td><td class="markdownTableBodyNone">All of the single lines   </td></tr>
-<tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">multilinestrings  </td><td class="markdownTableBodyNone">All of the multiple lines   </td></tr>
-<tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">multipolygons  </td><td class="markdownTableBodyNone">All of the polygons   </td></tr>
-<tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">other_relations  </td><td class="markdownTableBodyNone">All of the tags   </td></tr>
-<tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">points  </td><td class="markdownTableBodyNone">All of the nodes   </td></tr>
-<tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">spatial_ref_sys  </td><td class="markdownTableBodyNone">Geospatial data for postgis   </td></tr>
 </table>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
