deploy: 08695e8eb3d462880a7c32a3624af8a81db4b38a

--- a/md_doc_statistics.html
+++ b/md_doc_statistics.html
@@ -261,7 +261,7 @@ training data table</h2>
 <tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone">teams   </td><td class="markdownTableBodyNone">The teams the mapper is a member of    </td></tr>
 <tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">gender   </td><td class="markdownTableBodyNone">The slef-defined gender (optional) of the mapper    </td></tr>
+<td class="markdownTableBodyNone">gender   </td><td class="markdownTableBodyNone">The self-defined gender (optional) of the mapper    </td></tr>
 <tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone">hours   </td><td class="markdownTableBodyNone">The hours of training    </td></tr>
 <tr class="markdownTableRowEven">
