deploy: ed7bac4279defac0109a78c3037fcf879420e9ce

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Dependencies</h1>
 <p>Fedora 33, Debian Buster, and Ubuntu Groovy contain a package for librange-v3, which is the code base for what will be in C++ 2020. Both Debian Buster and Ubuntu Groovy ship <em>libpqxx 6.x</em>, which has a bug which has been fixed in <em>libpqxx 7.x</em>. Fedora 33 ships the newer version.</p>
 <h1><a class="anchor" id="autotoc_md2"></a>
 More Information</h1>
-<p>If you want to know more about Underpass, the <a href="https://robsavoye.github.io/underpass/pages.html">project Documentation</a> is here. This includes the internal documentation of all the classes. The source code is <a href="https://github.com/robsavoye/underpass">available here</a>. </p>
+<p>If you want to know more about Underpass, the <a href="https://hotosm.github.io/underpass/index.html">project Documentation</a> is here. This includes the internal documentation of all the classes. The source code is <a href="https://github.com/robsavoye/underpass">available here</a>. </p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
 <!-- start footer part -->
