deploy: 9f6fb94bd76e915bb8cd698276b9b12eae97c75f

--- a/inherits.html
+++ b/inherits.html
@@ -154,9 +154,10 @@ $(function() {
 </td></tr>
 <tr><td><img src="inherit_graph_16.png" border="0" usemap="#apq_1_1Pq" alt=""/>
 <map name="apq_1_1Pq" id="apq_1_1Pq">
-<area shape="rect" href="classpq_1_1Pq.html" title=" " alt="" coords="5,31,64,57"/>
-<area shape="rect" href="classosmstats_1_1QueryOSMStats.html" title="This handles all direct database access." alt="" coords="112,5,289,32"/>
-<area shape="rect" href="classunderpass_1_1Underpass.html" title=" " alt="" coords="125,56,276,83"/>
+<area shape="rect" href="classpq_1_1Pq.html" title=" " alt="" coords="5,56,64,83"/>
+<area shape="rect" href="classosm2pgsql_1_1Osm2Pgsql.html" title="The Osm2Pgsql class handles the communication with an osm2pgsql DB." alt="" coords="121,5,280,32"/>
+<area shape="rect" href="classosmstats_1_1QueryOSMStats.html" title="This handles all direct database access." alt="" coords="112,56,289,83"/>
+<area shape="rect" href="classunderpass_1_1Underpass.html" title=" " alt="" coords="125,107,276,133"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_17.png" border="0" usemap="#areplication_1_1membuf" alt=""/>
