--- a/pq_8hh.html
+++ b/pq_8hh.html
@@ -95,13 +95,14 @@ This graph shows which files directly or indirectly include this file:</div>
 <div class="dyncontent">
 <div class="center"><img src="pq_8hh__dep__incl.png" border="0" usemap="#adata_2pq_8hhdep" alt=""/></div>
 <map name="adata_2pq_8hhdep" id="adata_2pq_8hhdep">
-<area shape="rect" title="Pq for monitoring the OSM planet server for replication files." alt="" coords="48,5,131,32"/>
-<area shape="rect" href="underpass_8hh.html" title="Underpass for monitoring the OSM planet server for replication files." alt="" coords="5,304,133,331"/>
-<area shape="rect" href="osmstats_8hh.html" title="This file is used to work with the OSM Stats database." alt="" coords="151,80,302,107"/>
-<area shape="rect" href="geoutil_8hh.html" title="This file parses a data file containing boundaries." alt="" coords="107,155,213,181"/>
-<area shape="rect" href="threads_8hh.html" title="Threads for monitoring/synchronizing various data sources:" alt="" coords="238,155,349,181"/>
-<area shape="rect" href="changeset_8hh.html" title="The file is used for processing changeset files." alt="" coords="373,155,531,181"/>
-<area shape="rect" href="replication_8hh.html" title="This class downloads replication files, and adds them to the database." alt="" coords="215,229,371,256"/>
+<area shape="rect" title="Pq for monitoring the OSM planet server for replication files." alt="" coords="68,5,151,32"/>
+<area shape="rect" href="osm2pgsql_8hh.html" title="Manages a osm2pgsql DB." alt="" coords="44,80,175,107"/>
+<area shape="rect" href="underpass_8hh.html" title="Underpass for monitoring the OSM planet server for replication files." alt="" coords="59,304,187,331"/>
+<area shape="rect" href="osmstats_8hh.html" title="This file is used to work with the OSM Stats database." alt="" coords="200,80,350,107"/>
+<area shape="rect" href="threads_8hh.html" title="Threads for monitoring/synchronizing various data sources:" alt="" coords="57,155,168,181"/>
+<area shape="rect" href="replication_8hh.html" title="This class downloads replication files, and adds them to the database." alt="" coords="45,229,201,256"/>
+<area shape="rect" href="geoutil_8hh.html" title="This file parses a data file containing boundaries." alt="" coords="424,155,531,181"/>
+<area shape="rect" href="changeset_8hh.html" title="The file is used for processing changeset files." alt="" coords="192,155,350,181"/>
 </map>
 </div>
 </div>
