deploy: fb4ebd34ba2e7cbe459d6ac436bd4b964bd36276

--- a/classpq_1_1Pq.html
+++ b/classpq_1_1Pq.html
@@ -83,6 +83,7 @@ Inheritance diagram for pq::Pq:</div>
 <area shape="rect" href="classgalaxy_1_1QueryGalaxy.html" title="This handles all direct database access." alt="" coords="97,80,234,107"/>
 <area shape="rect" href="classosm2pgsql_1_1Osm2Pgsql.html" title="The Osm2Pgsql class handles the communication with an osm2pgsql DB." alt="" coords="258,80,417,107"/>
 <area shape="rect" href="classunderpass_1_1Underpass.html" title=" " alt="" coords="441,80,591,107"/>
+<area shape="rect" href="classTestOSMStats.html" title=" " alt="" coords="111,155,220,181"/>
 <area shape="rect" href="classTestOsm2Pgsql.html" title=" " alt="" coords="279,155,395,181"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
