--- a/inherits.html
+++ b/inherits.html
@@ -175,6 +175,7 @@ $(function() {
 <area shape="rect" href="classgalaxy_1_1QueryGalaxy.html" title="This handles all direct database access." alt="" coords="123,56,260,83"/>
 <area shape="rect" href="classosm2pgsql_1_1Osm2Pgsql.html" title="The Osm2Pgsql class handles the communication with an osm2pgsql DB." alt="" coords="112,107,271,133"/>
 <area shape="rect" href="classunderpass_1_1Underpass.html" title=" " alt="" coords="116,157,267,184"/>
+<area shape="rect" href="classTestOSMStats.html" title=" " alt="" coords="322,56,431,83"/>
 <area shape="rect" href="classTestOsm2Pgsql.html" title=" " alt="" coords="319,107,435,133"/>
 </map>
 </td></tr>
@@ -218,17 +219,16 @@ $(function() {
 <area shape="rect" href="structreplicatorconfig_1_1ReplicatorConfig.html" title="The ReplicatorConfig struct stores replicator configuration." alt="" coords="5,5,179,47"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_26.png" border="0" usemap="#aTestOSMStats" alt=""/>
-<map name="aTestOSMStats" id="aTestOSMStats">
-<area shape="rect" title=" " alt="" coords="5,31,123,57"/>
-<area shape="rect" href="classTestOSMStats.html" title=" " alt="" coords="171,5,280,32"/>
-<area shape="rect" href="classTestStats.html" title=" " alt="" coords="186,56,265,83"/>
-</map>
-</td></tr>
-<tr><td><img src="inherit_graph_27.png" border="0" usemap="#aTestPG" alt=""/>
+<tr><td><img src="inherit_graph_26.png" border="0" usemap="#aTestPG" alt=""/>
 <map name="aTestPG" id="aTestPG">
 <area shape="rect" title=" " alt="" coords="5,5,92,32"/>
 <area shape="rect" href="classTestPG.html" title=" " alt="" coords="140,5,207,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_27.png" border="0" usemap="#aTestStats" alt=""/>
+<map name="aTestStats" id="aTestStats">
+<area shape="rect" title=" " alt="" coords="5,5,123,32"/>
+<area shape="rect" href="classTestStats.html" title=" " alt="" coords="171,5,249,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_28.png" border="0" usemap="#aTestTM" alt=""/>
