--- a/classgalaxy_1_1QueryGalaxy.html
+++ b/classgalaxy_1_1QueryGalaxy.html
@@ -85,6 +85,7 @@ Inheritance diagram for galaxy::QueryGalaxy:</div>
 <div class="center"><img src="classgalaxy_1_1QueryGalaxy__inherit__graph.png" border="0" usemap="#agalaxy_1_1QueryGalaxy_inherit__map" alt="Inheritance graph"/></div>
 <map name="agalaxy_1_1QueryGalaxy_inherit__map" id="agalaxy_1_1QueryGalaxy_inherit__map">
 <area shape="rect" title="This handles all direct database access." alt="" coords="5,80,143,107"/>
+<area shape="rect" href="classTestOSMStats.html" title=" " alt="" coords="19,155,129,181"/>
 <area shape="rect" href="classpq_1_1Pq.html" title=" " alt="" coords="45,5,103,32"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
